--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,30 @@
 <% layout('layouts/boilerplate') %>
+<style>
+    h1 {
+            margin-bottom: 20px;
+        }
+
+        .card {
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+
+        .card-img-top {
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            object-fit: cover;
+            height: 250px;
+        }
+
+        .card-body {
+            padding: 20px;
+        }
+
+        .btn-add {
+            margin-bottom: 20px;
+        }
+</style>
 <div id="cluster-map"></div>
 <div class="container">
     <h1>All Campgrounds</h1>
